Fix docker commands and clean up inference output.

--- a/models.echoquality/inference/EchoQualityDemo.ipynb
+++ b/models.echoquality/inference/EchoQualityDemo.ipynb
@@ -6,8 +6,13 @@
    "source": [
     "# EchoQuality Demo Notebook\n",
     "\n",
-    "This notebook demonstrates how to use the EchoQuality model to assess the quality of echocardiogram videos. The model analyzes DICOM files and predicts whether the video quality is acceptable.\n",
-    "\n",
+    "This notebook demonstrates how to use the EchoQuality model to assess the quality of echocardiogram videos. The model analyzes DICOM files and predicts whether the video quality is acceptable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Overview\n",
     "\n",
     "The EchoQuality model uses a pre-trained R(2+1)D model to classify the quality of echocardiogram videos. The model processes DICOM files, applies masking to isolate the ultrasound region, and classifies videos as PASS/FAIL with a threshold of 0.3."
@@ -26,7 +31,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "import torch\n",
     "import numpy as np\n",
@@ -40,8 +44,8 @@
     "import json\n",
     "\n",
     "# Import functions from our modules\n",
-    "from EchoPrime_qc import mask_outside_ultrasound, crop_and_scale, get_quality_issues\n",
-    "from echo_model_evaluation import visualize_gradcam\n",
+    "from inference.EchoPrime_qc import mask_outside_ultrasound, crop_and_scale, get_quality_issues\n",
+    "from training.echo_model_evaluation import visualize_gradcam\n",
     "\n",
     "# Set device\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
@@ -61,7 +65,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Constants for video processing\n",
     "frames_to_take = 32\n",
@@ -71,7 +74,7 @@
     "std = torch.tensor([47.989223, 46.456997, 47.20083]).reshape(3, 1, 1, 1)\n",
     "\n",
     "# Load model\n",
-    "model_weights = \"./video_quality_model.pt\"\n",
+    "model_weights = \"./weights/video_quality_model.pt\"\n",
     "model = r2plus1d_18(num_classes=1)\n",
     "model.load_state_dict(torch.load(model_weights, map_location=device))\n",
     "model = model.to(device)\n",
@@ -93,7 +96,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "def process_dicom(dicom_path, save_mask_images=False):\n",
     "    \"\"\"\n",
@@ -176,10 +178,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Path to example DICOM files\n",
-    "example_dir = \"./model_data/example_study3\"\n",
+    "example_dir = \"./data/example_study\"\n",
     "\n",
     "# Find DICOM files\n",
     "dicom_paths = glob.glob(f\"{example_dir}/**/*\", recursive=True)\n",
@@ -203,7 +204,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Process the first DICOM file\n",
     "if len(dicom_paths) > 0:\n",
@@ -245,12 +245,12 @@
     "            model, \n",
     "            video, \n",
     "            target_layer_name=\"layer4\", \n",
-    "            save_path=\"gradcam_visualization.png\"\n",
+    "            save_path=\"./results/gradcam_visualization.png\"\n",
     "        )\n",
     "        \n",
     "        # Display GradCAM visualization\n",
     "        plt.figure(figsize=(12, 8))\n",
-    "        img = plt.imread(\"gradcam_visualization.png\")\n",
+    "        img = plt.imread(\"./results/gradcam_visualization.png\")\n",
     "        plt.imshow(img)\n",
     "        plt.axis('off')\n",
     "        plt.title(\"GradCAM Visualization\")\n",
@@ -274,7 +274,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Process all DICOM files\n",
     "results = {}\n",
@@ -337,7 +336,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Extract scores\n",
     "scores = [result[\"score\"] for result in results.values()]\n",
@@ -379,13 +377,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Save results to JSON\n",
-    "with open(\"quality_results.json\", \"w\") as f:\n",
+    "with open(\"./results/quality_results.json\", \"w\") as f:\n",
     "    json.dump(results, f, indent=2)\n",
     "\n",
-    "print(\"Results saved to quality_results.json\")"
+    "print(\"Results saved to ./results/quality_results.json\")"
    ]
   },
   {
@@ -402,7 +399,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -416,7 +413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
