Pick up any file in data dir

--- a/models.echoprime/inference/EchoPrimeDemo.ipynb
+++ b/models.echoprime/inference/EchoPrimeDemo.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "f540de4b",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
     "                                        ready to be fed into EchoPrime.\n",
     "    \"\"\"\n",
     "\n",
-    "    dicom_paths = glob.glob(f'{INPUT}/**/*.dcm',recursive=True)\n",
+    "    dicom_paths = glob.glob(f'{INPUT}/**/*',recursive=True)\n",
     "    stack_of_videos=[]\n",
     "    for idx, dicom_path in tqdm(enumerate(dicom_paths),total=len(dicom_paths)):\n",
     "        try:\n",
