--- a/models.echoprime/inference/ViewClassificationDemo.ipynb
+++ b/models.echoprime/inference/ViewClassificationDemo.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "7280b2fd",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
     "                                        ready to be fed into EchoPrime.\n",
     "    \"\"\"\n",
     "\n",
-    "    dicom_paths = glob.glob(f'{INPUT}/**/*.dcm',recursive=True)\n",
+    "    dicom_paths = glob.glob(f'{INPUT}/**/*',recursive=True)\n",
     "    stack_of_videos=[]\n",
     "    for idx, dicom_path in tqdm(enumerate(dicom_paths),total=len(dicom_paths)):\n",
     "        try:\n",
