Clean up notebook paths

--- a/models.echoprime/notebooks/EchoPrime-Demo.ipynb
+++ b/models.echoprime/notebooks/EchoPrime-Demo.ipynb
@@ -333,13 +333,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "21e8aac5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# load MIL weights per section\n",
-    "MIL_weights = pd.read_csv(\"MIL_weights.csv\")\n",
+    "MIL_weights = pd.read_csv(\"../weights/MIL_weights.csv\")\n",
     "non_empty_sections=MIL_weights['Section']\n",
     "section_weights=MIL_weights.iloc[:,1:].to_numpy()"
    ]
