Change raw and data folders to cleaner names

--- a/models.echoquality/notebooks/EchoPrime-Video-Quality-Demo.ipynb
+++ b/models.echoquality/notebooks/EchoPrime-Video-Quality-Demo.ipynb
@@ -180,7 +180,7 @@
    "metadata": {},
    "source": [
     "# Path to example DICOM files\n",
-    "example_dir = \"./data/example_study\"\n",
+    "example_dir = \"./preprocessed_data/example_study\"\n",
     "\n",
     "# Find DICOM files\n",
     "dicom_paths = glob.glob(f\"{example_dir}/**/*\", recursive=True)\n",
